# sdkwork-notary

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json
.github/workflows/: package.yml  verify.yml
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/: README.md
apis/app-api/notary/: README.md  notary-app-api.openapi.json
apis/backend-api/notary/: README.md  notary-backend-api.openapi.json
apps/: README.md
apps/sdkwork-notary-h5/: .env.example  AGENTS.md  index.html  package.json  pnpm-lock.yaml  sdkwork.app.config.json  tsconfig.json  vite.config.ts
apps/sdkwork-notary-h5/docs/: INDEX.yaml  (+1 more)
apps/sdkwork-notary-pc/: AGENTS.md  index.html  package.json  pnpm-lock.yaml  sdkwork.app.config.json  tsconfig.json  vite.config.ts
configs/: README.md  sdkwork-api-cloud-gateway.notary.development.toml  sdkwork-api-cloud-gateway.notary.production.toml
configs/defaults/: README.md
configs/examples/: README.md
configs/profiles/: README.md
configs/schemas/: README.md
configs/topology/: cloud-hosted.split-services.development.env  cloud-hosted.split-services.production.env  cloud.split-services.development.env  cloud.split-services.production.env  self-hosted.split-services.development.env  self-hosted.split-services.production.env  standalone.split-services.development.env  standalone.split-services.production.env
crates/: README.md
crates/sdkwork-notary-case-contract/: Cargo.toml  README.md
crates/sdkwork-notary-case-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-notary-case-repository-sqlx/migrations/: 0001_notary_foundation.sql  DEPRECATED.md
crates/sdkwork-notary-case-repository-sqlx/specs/: component.spec.json
crates/sdkwork-notary-case-repository-sqlx/src/: bootstrap.rs  lib.rs  pii_vault.rs  postgres_case_repository.rs  repository_support.rs  schema_migration.rs  sqlite_case_repository.rs
crates/sdkwork-notary-case-repository-sqlx/tests/: postgres_case_repository_api.rs  sqlite_case_repository.rs
crates/sdkwork-notary-case-service/: Cargo.toml  README.md
crates/sdkwork-notary-case-service/specs/: README.md  component.spec.json
crates/sdkwork-notary-case-service/src/: lib.rs  permissions.rs  ports.rs  service.rs
crates/sdkwork-notary-case-service/tests/: notary_runtime_standard.rs  recording_ports.rs
crates/sdkwork-notary-database-host/: Cargo.toml  README.md
crates/sdkwork-notary-database-host/specs/: component.spec.json
crates/sdkwork-notary-database-host/src/: lib.rs
crates/sdkwork-notary-embedded-bootstrap/: Cargo.toml
crates/sdkwork-notary-embedded-bootstrap/src/: bootstrap.rs  lib.rs
crates/sdkwork-notary-embedded-bootstrap/src/adapters/: appbase_iam.rs  commerce_order.rs  drive_workspace.rs  mod.rs
crates/sdkwork-notary-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-notary-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-notary-storage-sqlx-rust/: Cargo.toml
crates/sdkwork-notary-storage-sqlx-rust/src/: lib.rs  sqlite_case_repository.rs
crates/sdkwork-router-notary-app-api/: Cargo.toml
crates/sdkwork-router-notary-app-api/specs/: component.spec.json
crates/sdkwork-router-notary-app-api/src/: handlers.rs  lib.rs  manifest.rs  routes.rs  runtime_service.rs  service_port.rs
crates/sdkwork-router-notary-app-api/tests/: query_handlers.rs  runtime_service.rs
crates/sdkwork-router-notary-backend-api/: Cargo.toml
crates/sdkwork-router-notary-backend-api/specs/: component.spec.json
crates/sdkwork-router-notary-backend-api/src/: handlers.rs  lib.rs  manifest.rs  routes.rs  runtime_service.rs  service_port.rs
crates/sdkwork-router-notary-backend-api/tests/: query_handlers.rs  runtime_service.rs
crates/sdkwork-router-notary-http-auth/: Cargo.toml  README.md
crates/sdkwork-routes-notary-app-api/: Cargo.toml
crates/sdkwork-routes-notary-backend-api/: Cargo.toml
crates/sdkwork-routes-notary-http-auth/: Cargo.toml  README.md
crates/sdkwork-routes-notary-http-auth/specs/: component.spec.json
crates/sdkwork-routes-notary-http-auth/src/: context.rs  lib.rs  response.rs  test_support.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/seeds/: seed.manifest.json
deployments/: README.md
docs/: INDEX.yaml  README.md  root-layout.md  topology-standard.md
docs/schema-registry/: README.md
examples/: README.md
iam/registry/: README.md  iam-registry.config.json
jobs/: README.md
plugins/: README.md
scripts/: README.md  generate-notary-route-manifests.mjs  notary-dev.mjs  sync-notary-api-framework-metadata.mjs  sync-notary-openapi-authorities.mjs  verify-notary-iam-manifest.test.mjs  verify-notary-standard-architecture.test.mjs  verify-notary-utils-standard.test.mjs
scripts/dev/: sdkwork-notary-topology-baggage.test.mjs
scripts/lib/: notary-topology.mjs
sdks/: README.md
sdks/_route-manifests/: README.md
sdks/sdkwork-notary-app-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
sdks/sdkwork-notary-backend-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
sdks/test/: notary-chat-pc-real-app-integration.test.mjs  notary-composed-facade.test.mjs  notary-contracts.test.mjs  notary-database-framework.test.mjs  notary-frontend-adapter.test.mjs  notary-im-pc-real-app-integration.test.mjs  notary-route-crates.test.mjs  notary-runtime-standards.test.mjs  notary-sdk-package-root.test.mjs  notary-storage-sqlx.test.mjs  notary-web-framework.test.mjs
specs/: README.md  component.spec.json  iam.module.manifest.json  topology.spec.json
tests/: README.md
tests/contract/: README.md  app-manifest-workflow.contract.test.mjs  h5-component-specs.contract.test.mjs  pc-component-specs.contract.test.mjs  sdk-generate-check.contract.test.mjs
tests/e2e/: README.md
tests/fixtures/: README.md
tests/integration/: README.md
tests/static/: README.md
tools/: README.md  materialize_notary_database_contract.mjs
(+879 files in other folders)
