[workspace]
resolver = "2"
members = [
  "crates/sdkwork-notary-case-contract",
  "crates/sdkwork-notary-case-service",
  "crates/sdkwork-notary-case-repository-sqlx",
  "crates/sdkwork-router-notary-http-auth",
  "crates/sdkwork-router-notary-app-api",
  "crates/sdkwork-router-notary-backend-api",
]

[workspace.package]
edition = "2021"
license = "SEE LICENSE IN LICENSE"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8"
http = "1.3"
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-iam-web-adapter = { path = "../sdkwork-appbase/crates/sdkwork-iam-web-adapter" }
