[workspace]
resolver = "2"
members = [
  "crates/sdkwork-notary-database-host",
  "crates/sdkwork-notary-case-contract",
  "crates/sdkwork-notary-case-service",
  "crates/sdkwork-notary-case-repository-sqlx",
  "crates/sdkwork-router-notary-http-auth",
  "crates/sdkwork-router-notary-app-api",
  "crates/sdkwork-router-notary-backend-api",
]

[workspace.package]
edition = "2021"
license = "SEE LICENSE IN LICENSE"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8"
http = "1.3"
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-notary-database-host = { path = "crates/sdkwork-notary-database-host" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
