[workspace]
resolver = "2"
members = [
    "crates/sdkwork-notary-gateway-assembly",
    "crates/sdkwork-notary-embedded-bootstrap",
  "crates/sdkwork-notary-database-host",
  "crates/sdkwork-notary-case-contract",
  "crates/sdkwork-notary-case-service",
  "crates/sdkwork-notary-case-repository-sqlx",
  "crates/sdkwork-routes-notary-http-auth",
  "crates/sdkwork-routes-notary-app-api",
  "crates/sdkwork-routes-notary-backend-api",
]

[workspace.package]
edition = "2021"
license = "SEE LICENSE IN LICENSE"
version = "0.1.0"

[workspace.dependencies]
sdkwork-drive-workspace-service = { path = "../sdkwork-drive/crates/sdkwork-drive-workspace-service" }
sdkwork-order-service = { path = "../sdkwork-order/crates/sdkwork-order-service" }
sdkwork-order-repository-sqlx = { path = "../sdkwork-order/crates/sdkwork-order-repository-sqlx" }
sdkwork-contract-service = { path = "../sdkwork-account/crates/sdkwork-contract-service" }
axum = "0.8"
http = "1.3"
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-notary-database-host = { path = "crates/sdkwork-notary-database-host" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
