[package]
name = "sdkwork-notary-case-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sdkwork_notary_case_service"

[dependencies]
async-trait = "0.1.89"
serde_json = "1.0"
tracing = "0.1"
sdkwork-notary-case-contract = { path = "../sdkwork-notary-case-contract" }
sdkwork-utils-rust.workspace = true

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
