[package]
name = "sdkwork-notary-database-host"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "SDKWork Notary database lifecycle bootstrap."

[lib]
name = "sdkwork_notary_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
sdkwork_database_config = { workspace = true }
sdkwork_database_lifecycle = { workspace = true }
sdkwork_database_spi = { workspace = true }
sdkwork_database_sqlx = { workspace = true }
