[package]
name = "sdkwork-notary-database-host"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "SDKWork Notary database lifecycle bootstrap."

[lib]
name = "sdkwork_notary_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
sdkwork-database-config.workspace = true
sdkwork-database-lifecycle.workspace = true
sdkwork-database-spi.workspace = true
sdkwork-database-sqlx.workspace = true
