[package]
name = "sdkwork-notary-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-notary application HTTP plane."

[lib]
name = "sdkwork_notary_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_routes_notary_app_api = { package = "sdkwork-routes-notary-app-api", path = "../sdkwork-routes-notary-app-api" }
sdkwork_routes_notary_backend_api = { package = "sdkwork-routes-notary-backend-api", path = "../sdkwork-routes-notary-backend-api" }
sdkwork_routes_notary_http_auth = { package = "sdkwork-routes-notary-http-auth", path = "../sdkwork-routes-notary-http-auth" }
