[package]
name = "sdkwork-notary-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-notary application HTTP plane."

[lib]
name = "sdkwork_notary_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
sdkwork-notary-embedded-bootstrap = { path = "../sdkwork-notary-embedded-bootstrap" }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
