[package]
name = "sdkwork-router-notary-app-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sdkwork_router_notary_app_api"

[dependencies]
async-trait = "0.1.89"
axum = "0.7"
serde_json = "1.0"
sdkwork-notary-case-contract = { path = "../sdkwork-notary-case-contract" }
sdkwork-notary-case-service = { path = "../sdkwork-notary-case-service" }
tokio = { version = "1.52", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "sync"] }
