[package]
name = "sdkwork-router-notary-backend-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sdkwork_router_notary_backend_api"

[dependencies]
async-trait = "0.1.89"
axum = "0.7"
serde_json = "1.0"
sdkwork-notary-core-rust = { path = "../sdkwork-notary-core-rust" }
sdkwork-notary-runtime-rust = { path = "../sdkwork-notary-runtime-rust" }
tokio = { version = "1.52", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "sync"] }
