[package]
name = "sdkwork-routes-notary-http-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sdkwork_routes_notary_http_auth"

[dependencies]
axum.workspace = true
http.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true
